--- a/templates/register.html
+++ b/templates/register.html
@@ -54,18 +54,10 @@
                     </div>
                   </div>
 
-                    <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                    <div data-mdb-input-init class="form-outline flex-fill mb-0">
-                      <input type="password" required="required" name="password" id="form3Example4c" class="form-control" />
-                      <label class="form-label" for="form3Example4c">Confirm Password</label>
-                    </div>
-                  </div>
-
                   <div class="form-check d-flex justify-content-center mb-5">
                     <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
                     <label class="form-check-label" for="form2Example3">
-                      I agree to the <a href="#!">Terms of service</a>
+                      I agree to the <a href="#">Terms of service</a>
                     </label>
                   </div>
 
